<package>
  <name>pose_follower_3d</name>
  <version>0.0.0</version>
  <description>
    This package provides an extended pose_follwer to perform 3D collision checks against the robot's full kinematic configuration. It should serve as a drop-in replacement as local planner in the navigation stack, to be used with global plans from sbpl_lattice_planner_3d. The 3D collision map is usually sent out from octomap_server.
  </description>
  <maintainer email="dornhege@informatik.uni-freiburg.de">Christian Dornhege</maintainer>
  <maintainer email="hertle@informatik.uni-freiburg.de">Andreas Hertle</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/pose_follower_3d</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>sbpl_3dnav_planner</build_depend>
  <build_depend>full_body_nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>octomap_server</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>sbpl_3dnav_planner</run_depend>
  <run_depend>full_body_nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lpose_follower_3d" />
    <nav_core plugin="${prefix}/blp_plugin.xml" />
  </export>
</package>


